--- a/locale/en-US/browserOverlay.properties
+++ b/locale/en-US/browserOverlay.properties
@@ -1,2 +1,3 @@
-defaultTitle=JavaScript Application
+defaultTitleUntitled=JavaScript Application
+defaultTitle=The page at $HOST says:
 checklabel=Prevent this page from creating additional dialogs
